syntax = "proto3";
package Scores.V1;
option csharp_namespace = "CreScore.Scores";

service ScoresService {
  rpc GetMyScores(GetMyScoresRequest) returns (GetMyScoresResponse);
  rpc GetHomeContent(GetHomeContentRequest) returns (GetHomeContentResponse);
  rpc AddScore(AddScoreRequest) returns (AddScoreResponse);
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
  rpc GetGrades(GetGradesRequest) returns (GetGradesResponse);
  rpc LoginEcho(LoginEchoRequest) returns (LoginEchoResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

enum ContentType {
  Game = 0;
  Movie = 1;
  Video = 2;
  Song = 3;
}

message User {
  string id = 1;
  string name = 2;
}

message Grade {
  int64 id = 1;
  string name = 2;
  int64 gradeSystemId = 3;
  string gradeSystemName = 4;
}

message Content {
  int64 id = 1;
  string name = 2;
  ContentType type = 3;
  string description = 4;
}

message GradedContent {
  User user = 1;
  Content content = 2;
  repeated Grade grade = 3;
  int64 timestamp = 4;
}

message GetMyScoresRequest {}

message GetMyScoresResponse {
  repeated GradedContent gradedContentList = 1;
}

message GetHomeContentRequest {}

message GetHomeContentResponse {
  repeated GradedContent gradedContentList = 1;
}

message GetContentRequest{

}

message GetContentResponse {
  repeated Content contentList = 1;
}

message AddScoreRequest {
  int64 contentId = 1;
  int64 gradeId = 2;
}

message AddScoreResponse {
  bool success = 1;
}

message GetGradesRequest {

}

message GetGradesResponse {
  repeated Grade grades = 1;
}

message LoginEchoRequest {

}

message LoginEchoResponse {

}

message GetProfileRequest{

}

message GradeSystem{
  int64 id = 1;
  User user = 2;
  repeated Grade grades = 3;
}

message GetProfileResponse {
  User user = 1;
  int32 subscribersCount = 2;
  int32 subscriptionsCount = 3;
  string info = 4;
  repeated GradedContent userGrades = 5;
  repeated GradeSystem gradeSystem = 6;
}